# pap_admin_bot

./: README.md  contentful.http  crawling_client.py  google_sheet_client.py  initialize_sheet.py  pyproject.toml  requirements.txt  slack_client.py  update_feedback_status.py  update_post_status.py  update_post_status_w_feedback.py  update_submit_status.py  utils.py
.github/workflows/: main.yml  update_feedback_status.yml  update_post_status.yml  update_submit_status.yml
src/: check_post_upload.py  data_contentful.py  data_sheet.py  data_slack.py  deposit.py  feedback.py  feedback_check.py  post.py
